2025-09-30 Activity bind